# Meta-YGN

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml  settings.json
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ClaudeCode-ConfigSearches/: claude-advices.md
Meta-YGN/: 00-Dashboard.md
Meta-YGN/.obsidian/: workspace.json
Meta-YGN/Architecture/: 00-Architecture-MOC.md  Competitive-Landscape.md  Control-Loop.md  Daemon.md  Guard-Pipeline.md  Hook-Lifecycle.md  MCP-Bridge.md  Memory-System.md  Tiered-Verification.md  Topology-Planner.md
Meta-YGN/Decisions/: 00-Decisions-MOC.md  ADR-001-Thin-Plugin-Smart-Daemon.md  ADR-002-Hook-Fallback.md  ADR-003-Evidence-Tiers.md  ADR-004-Tiered-Verification-Architecture.md  ADR-005-HTTP-Hooks-Migration.md
Meta-YGN/Features/: 00-Features-MOC.md  Adaptive-Guards.md  Auto-Checkpoint.md  Bearer-Auth.md  Budget-Tracker.md  Calibration-Report.md  Completion-Verifier.md  Datalog-Policy-Engine.md  Dynamic-Topology.md  Entropy-Calibration-EGPO.md  Fatigue-Profiler.md  Guard-Pipeline-Feature.md  Haiku-Judge.md  Heuristic-Evolution.md  MCP-Bridge-Feature.md  MOP-Detector.md  Neural-Embeddings.md  OTEL-Exporter.md  Plasticity-Detection-RL2F.md  Prompt-Injection-Guard.md  RL-Trajectory-Export.md  Semantic-Router.md  Sequence-Monitor.md  Session-Replay.md  Test-Integrity.md  UCB-Memory-Retrieval.md  WASM-Sandbox.md
Meta-YGN/Research/: 00-Research-MOC.md
Meta-YGN/Skills-Agents/: 00-Skills-Agents-MOC.md
Meta-YGN/Templates/: ADR.md  Feature.md  Session-Review.md
agents/: aletheia-main.md  cost-auditor.md  repo-cartographer.md  researcher.md  skeptic.md  verifier.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  util.rs
crates/cli/src/commands/: doctor.rs  eval.rs  export.rs  init.rs  mcp.rs  mod.rs  recall.rs  replay.rs  start.rs  status.rs  stop.rs  top.rs
crates/cli/src/tui/: app.rs  mod.rs  ui.rs
crates/cli/tests/: cli_test.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  lib.rs  monitor.rs  policy.rs  policy_engine.rs  runner.rs  sequence_monitor.rs  topology.rs
crates/core/src/heuristics/: entropy.rs  evolver.rs  fitness.rs  mod.rs  mop.rs
crates/core/src/stages/: act.rs  assess.rs  budget.rs  calibrate.rs  classify.rs  compact.rs  competence.rs  decide.rs  learn.rs  mod.rs  strategy.rs  tool_need.rs  verify.rs
crates/core/tests/: assess_routing_test.rs  assess_test.rs  budget_test.rs  classify_test.rs  compact_test.rs  decide_test.rs  entropy_test.rs  heuristics_test.rs  loop_test.rs  monitor_test.rs  mop_test.rs  policy_engine_test.rs  sequence_monitor_test.rs  strategy_test.rs  tool_need_test.rs  topology_test.rs  verify_test.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: app_state.rs  auth.rs  judge.rs  lib.rs  main.rs  mcp.rs  metrics.rs  postprocess.rs  semantic_router.rs  session.rs  telemetry.rs  verification.rs
crates/daemon/src/api/: admin.rs  budget.rs  calibration.rs  forge.rs  graph.rs  health.rs  heuristics.rs  hooks.rs  memory.rs  mod.rs  profiler.rs  replay.rs  sandbox.rs  semantic.rs  session_state.rs  trajectories.rs
crates/daemon/src/api/hooks/: mod.rs  post_tool_use.rs  pre_tool_use.rs  routes.rs  session_end.rs  stop.rs  user_prompt_submit.rs
crates/daemon/src/forge/: engine.rs  mod.rs  templates.rs
crates/daemon/src/profiler/: fatigue.rs  mod.rs  plasticity.rs
crates/daemon/src/proxy/: mod.rs  pruner.rs  service.rs
crates/daemon/tests/: api_test.rs  endpoint_coverage_test.rs  fatigue_test.rs  forge_test.rs  integration_e2e.rs  judge_test.rs  plasticity_test.rs  pruner_test.rs  semantic_router_test.rs  session_test.rs  verification_test.rs
crates/mcp-bridge/: Cargo.toml
crates/mcp-bridge/src/: handler.rs  lib.rs  main.rs
crates/mcp-bridge/tests/: handler_test.rs
crates/memory/: Cargo.toml
crates/memory/src/: crystallizer.rs  embeddings.rs  fastembed_provider.rs  fts.rs  graph.rs  lib.rs  store.rs  tiered.rs
crates/memory/tests/: competence_test.rs  crystallizer_test.rs  embeddings_test.rs  fastembed_test.rs  fts_test.rs  graph_embed_test.rs  graph_test.rs  replay_test.rs  store_test.rs  tiered_test.rs  trajectory_test.rs  ucb_test.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  wasm_sandbox.rs
crates/sandbox/tests/: sandbox_test.rs  wasm_sandbox_test.rs
crates/shared/: Cargo.toml
crates/verifiers/: Cargo.toml
crates/verifiers/src/: adaptive.rs  ast_guard.rs  checkpoint.rs  completion.rs  effect_classifier.rs  evidence.rs  guard_pipeline.rs  lib.rs  syntax.rs  test_integrity.rs
crates/verifiers/tests/: adaptive_test.rs  ast_guard_test.rs  checkpoint_test.rs  completion_test.rs  effect_classifier_test.rs  evidence_test.rs  guard_test.rs  syntax_test.rs  test_integrity_test.rs
docs/: CODEX-WORKFLOW.md  HOW-TO.md  PX-AUDIT.md  architecture-notes.md  codex-bootstrap-prompt.txt  daemon-contract.md  project-settings.example.json
docs/research-archive/: README.md  (+3 more)
eval/: README.md  pyproject.toml
examples/: .lsp.json.example  .mcp.json.example
hooks/: hooks.json
master-prompt/: master-prompt-chatgpt52pro.md  master-prompt-v2.patch
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
output-styles/: aletheia-proof.md
scripts/: common.py  hook-runner.sh  install-codex.ps1  install-codex.sh  install.sh  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  start-codex-metaygn.ps1  start-codex-metaygn.sh  stop.py  user_prompt_submit.py  validate-plugin.sh
searches/: CLAUDE-46-1Search.md  CLAUDE-46-2Search.md  CLAUDE-46-3Search.md  ChatGPT52Pro-1Search.md  GEMINI-31-DEEPTHINK-2Search.md  GEMINI-31-DEEPTHINK-4Search.md  GEMINI-31-Pro.md  GROK-420-1search.md  NEW-RESEARCHES.md  OPENSAGE-INTEGRATION-CODEX-52.md  Perplexity1.md
tests/: e2e.sh
wiki/: API-Reference.md  Architecture.md  CLI-Reference.md  FAQ.md  Getting-Started.md  Home.md  Troubleshooting.md  _Sidebar.md
(+69 files in other folders)
