[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/memory",
    "crates/daemon",
    "crates/cli",
    "crates/verifiers",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Yann Abadie"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
