[package]
name = "metaygn-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "aletheia"
path = "src/main.rs"

[dependencies]
metaygn-shared = { path = "../shared" }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs = "6"
