[package]
name = "metaygn-mcp-bridge"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "aletheia-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io"] }
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "6"
