[package]
name = "metaygn-sandbox"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
wasm = ["wasmtime", "wasmtime-wasi", "wat"]

[dependencies]
metaygn-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["process", "time", "io-util", "macros"] }
wasmtime = { version = "43", optional = true }
wasmtime-wasi = { version = "43", optional = true }
wat = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
