[package]
name = "metaygn-verifiers"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
metaygn-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
